# Meta

./: .gitignore  README.md  SPEC.md  TODO.md  test_openenv_client.py
.omc/: project-memory.json
.omc/state/: agent-replay-1e5a9e93-0e62-4c18-b5be-f532626d5e18.jsonl  agent-replay-c68223c6-459f-46bc-9223-6844ddfb6ace.jsonl  agent-replay-f94ba907-2d43-4bc3-944c-27df107e79d2.jsonl  idle-notif-cooldown.json  subagent-tracking.json
content_moderation_env/: .env.example  Dockerfile  README.md  __init__.py  client.py  env.py  grpo_train.py  inference.py  inference_output.txt  models.py  openai_client.py  openenv.yaml  prompts.py  pyproject.toml  requirements.txt  tasks.json  tasks.py  test_api_connection.py  test_moderation_prompt.py  test_reward.py
content_moderation_env/datasets/: easy_spam.json  hard_mixed.json  medium_toxic.json
content_moderation_env/server/: Dockerfile  __init__.py  app.py  environment.py
content_moderation_env/tasks/: __init__.py  easy.py  hard.py  medium.py
openenv-agent/: LICENSE  README.md  pyproject.toml
openenv-agent/src/openenv_agent/: __init__.py  agent.py  cli.py  client.py  env_loader.py  moderation_agent.py
openenv-agent/src/openenv_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
