[project]
name = "content_moderation_env"
version = "1.0.0"
description = "AI Content Moderation Environment using GPT-4.1 via OpenRouter"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.3.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.4.0",
]
